--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
         <title>Gina Ciccone</title>
         <link rel="stylesheet" href="/css/styles.css">
         <script src="/js/main.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap"
+            rel="stylesheet">
     </head>
     <body>
-        hola
+        <header>
+            <section>
+                <h1>Texto alternativo de prueba</h1>
+            </section>
+        </header>
+        <main></main>
+        <footer>
+        </footer>
     </body>
 </html>
