--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
     </head>
     <body>
         <header>
-            <section>
-                <h1>Texto alternativo de prueba</h1>
+            <section class="header-section">
+                <img class="img-logo"
+                    src="/img/logo.png"
+                    alt="logo portfolio">
+                <div class="header-section-two">
+                    <a href="#"><p>Dirección de fotografía</p></a>
+                    <a href="#"><p>FilmMaker</p></a>
+                    <a href="#"><p>Edición</p></a>
+                    <a href="#"><p>Reconocimientos</p></a>
+                    <a href="#"><p>Contáctame</p></a>
+                </div>
             </section>
         </header>
         <main></main>
