--- a/index.html
+++ b/index.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gina Ciccone</title>
-        <link rel="stylesheet" href="/css/styles.css">
-        <script src="/js/main.js"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
-            rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <section class="header-section">
-                <img class="img-logo"
-                    src="/img/logo.png"
-                    alt="logo portfolio">
-                <div class="header-section-two">
-                    <a href="#"><p>Dirección de fotografía</p></a>
-                    <a href="#"><p>FilmMaker</p></a>
-                    <a href="#"><p>Edición</p></a>
-                    <a href="#"><p>Reconocimientos</p></a>
-                    <a href="#"><p>Contáctame</p></a>
-                </div>
-            </section>
-        </header>
-        <main></main>
-        <footer>
-        </footer>
-    </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gina Ciccone</title>
+  <link rel="stylesheet" href="/css/styles.css" />
+  <script src="/js/main.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <section class="header-section">
+      <img class="img-logo" src="/img/logo.png" alt="logo portfolio" />
+      <div class="header-section-two">
+        <a href="#">
+          <p>Dirección de fotografía</p>
+        </a>
+        <a href="#">
+          <p>FilmMaker</p>
+        </a>
+        <a href="#">
+          <p>Edición</p>
+        </a>
+        <a href="#">
+          <p>Reconocimientos</p>
+        </a>
+        <a href="#">
+          <p>Contáctame</p>
+        </a>
+      </div>
+    </section>
+  </header>
+  <main>
+    <div class="title-projects">
+      <h2>Mi trabajo</h2>
+    </div>
+    <section class="project-miniatures">
+      <img src="./img/projects/project-1.webp" alt="film-1" />
+      <img src="./img/projects/project-2.webp" alt="film-2" />
+      <img src="./img/projects/project-3.webp" alt="film-3" />
+      <img src="./img/projects/project-4.webp" alt="film-4" />
+      <img src="./img/projects/project-5.webp" alt="film-5" />
+      <img src="./img/projects/project-6.webp" alt="film-6" />
+      <img src="./img/projects/project-7.webp" alt="film-7" />
+      <img src="./img/projects/project-8.webp" alt="film-8" />
+      <img src="./img/projects/project-9.webp" alt="film-9" />
+    </section>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
