--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Diseñado con ♥ para Gina</p>
+    </footer>
   </body>
 
 </html>
