--- a/index.html
+++ b/index.html
@@ -1,97 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gina Ciccone</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/main.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gina Ciccone</title>
+  <link rel="stylesheet" href="/css/styles.css" />
+  <script src="/js/main.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+</head>
 
-  <body>
-    <header>
-      <section class="header-section">
-        <img class="img-logo" src="/img/logo.png" alt="logo portfolio" />
-        <div class="header-section-two">
-          <a href="#">
-            <p>Dirección de fotografía</p>
-          </a>
-          <a href="#">
-            <p>FilmMaker</p>
-          </a>
-          <a href="#">
-            <p>Edición</p>
-          </a>
-          <a href="#">
-            <p>Reconocimientos</p>
-          </a>
-          <a href="#">
-            <p>Contáctame</p>
-          </a>
-        </div>
-      </section>
-    </header>
-    <main>
-      <div class="title-projects">
-        <h2>Mi trabajo</h2>
+<body>
+  <header>
+    <section class="header-section">
+      <img class="img-logo" src="/img/logo.png" alt="logo portfolio" />
+      <div class="header-section-two">
+        <a href="#">
+          <p>Dirección de fotografía</p>
+        </a>
+        <a href="#">
+          <p>FilmMaker</p>
+        </a>
+        <a href="#">
+          <p>Edición</p>
+        </a>
+        <a href="#">
+          <p>Reconocimientos</p>
+        </a>
+        <a href="#">
+          <p>Contáctame</p>
+        </a>
       </div>
-      <section class="project-miniatures">
-        <div>
-          <img src="./img/projects/project-1.webp" alt="film-1" />
-          <p>FRAGMENTOS DE CAZA</p>
-          <p>2023</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-2.webp" alt="film-2" />
-          <p>A VOLUNTAD</p>
-          <p>2023</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-3.webp" alt="film-3" />
-          <p>LA PRÓXIMA VEZ</p>
-          <p>2023</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-4.webp" alt="film-4" />
-          <p>FINGIR DEMENCIA - NACHO LAMBRE (VIDEOCLIP)</p>
-          <p>2023</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-5.webp" alt="film-5" />
-          <p>QUÉ BONITO QUE ESTÁ EL CIELO - ALISS (VIDEOCLIP)</p>
-          <p>2022</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-6.webp" alt="film-6" />
-          <p>THE BOX</p>
-          <p>2022</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-7.webp" alt="film-7" />
-          <p>THE BEST AT WHAT I DO</p>
-          <p>2022</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-8.webp" alt="film-8" />
-          <p>ME TENÉS CALZADO</p>
-          <p>2022</p>
-        </div>
-        <div>
-          <img src="./img/projects/project-9.webp" alt="film-9" />
-          <p>TRAZOS EN EL AIRE</p>
-          <p>2021</p>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <p>Diseñado con ♥ para Gina</p>
-    </footer>
-  </body>
+    </section>
+  </header>
+  <main>
+    <div class="title-projects">
+      <h2>Mi trabajo</h2>
+    </div>
+    <section class="project-miniatures">
+      <div>
+        <a href="#"><img src="./img/projects/project-1.webp" alt="film-1" /></a>
+        <p>FRAGMENTOS DE CAZA</p>
+        <p>----- 2023 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-2.webp" alt="film-2" /></a>
+        <p>A VOLUNTAD</p>
+        <p>----- 2023 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-3.webp" alt="film-3" /></a>
+        <p>LA PRÓXIMA VEZ</p>
+        <p>----- 2023 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-4.webp" alt="film-4" /></a>
+        <p>FINGIR DEMENCIA - NACHO LAMBRE (VIDEOCLIP)</p>
+        <p>----- 2023 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-5.webp" alt="film-5" /></a>
+        <p>QUÉ BONITO QUE ESTÁ EL CIELO - ALISS (VIDEOCLIP)</p>
+        <p>----- 2022 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-6.webp" alt="film-6" /></a>
+        <p>THE BOX</p>
+        <p>2022</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-7.webp" alt="film-7" /></a>
+        <p>THE BEST AT WHAT I DO</p>
+        <p>----- 2022 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-8.webp" alt="film-8" /></a>
+        <p>ME TENÉS CALZADO</p>
+        <p>----- 2022 -----</p>
+      </div>
+      <div>
+        <a href="#"><img src="./img/projects/project-9.webp" alt="film-9" /></a>
+        <p>TRAZOS EN EL AIRE</p>
+        <p>----- 2021 -----</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>Diseñado con ♥ para Gina</p>
+  </footer>
+</body>
 
 </html>
