--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
     </section>
   </header>
   <main>
+    <section class="about-me">
+      <div>
+        <img src="./img/me.webp" alt="me-picture">
+      </div>
+      <div class="presentation">
+        <h2>Hola, soy Gina :)</h2>
+        <br>
+        <p>
+          Soy de 🇦🇷, pero crecí en 🇵🇾
+          amo mucho el cine y la música.
+        </p>
+      </div>
+    </section>
     <div class="title-projects">
       <h2>Mi trabajo</h2>
     </div>
