favicon and new post

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gina Ciccone</title>
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <!-- icono para dispositivos Apple -->
+  <link rel="apple-touch-icon" href="img/favicon.ico">
+
   <link rel="stylesheet" href="/css/styles.css" />
   <script src="/js/main.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,6 +57,11 @@
       <h2>Mi trabajo</h2>
     </div>
     <section class="project-miniatures">
+      <div>
+        <a href="#"><img src="./img/projects/project-10.webp" alt="film-1" /></a>
+        <p>YA NO ME DUELE (VIDEOCLIP)</p>
+        <p>----- 2024 -----</p>
+      </div>
       <div>
         <a href="#"><img src="./img/projects/project-1.webp" alt="film-1" /></a>
         <p>FRAGMENTOS DE CAZA</p>
