ya no me duele section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <section class="project-miniatures">
       <div>
-        <a href="#"><img src="./img/projects/project-10.webp" alt="film-1" /></a>
+        <a href="./pages/ya_no_me_duele.html"><img src="./img/projects/project-10.webp" alt="film-1" /></a>
         <p>YA NO ME DUELE (VIDEOCLIP)</p>
         <p>----- 2024 -----</p>
       </div>
