fragmentos de caza section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>----- 2024 -----</p>
       </div>
       <div>
-        <a href="#"><img src="./img/projects/project-1.webp" alt="film-1" /></a>
+        <a href="./pages/fragmentos_de_caza.html"><img src="./img/projects/project-1.webp" alt="film-1" /></a>
         <p>FRAGMENTOS DE CAZA</p>
         <p>----- 2023 -----</p>
       </div>
