--- a/pages/fragmentos_de_caza.html
+++ b/pages/fragmentos_de_caza.html
@@ -80,7 +80,9 @@
                     <img src="../img/info-projects/project-two/fragmentos_de_caza_5.webp" alt="film-1" />
                 </a>
             </div>
-            <p>DIRIGIDO POR MANUEL RIOS BRIDOUX negrón.</p>
+            <div class="presentation">
+                <p>DIRIGIDO POR MANUEL RIOS BRIDOUX negrón.</p>
+            </div>
         </section>
     </main>
     <footer>
