--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>----- 2023 -----</p>
       </div>
       <div>
-        <a href="#"><img src="./img/projects/project-2.webp" alt="film-2" /></a>
+        <a href="./pages/a_voluntad.html"><img src="./img/projects/project-2.webp" alt="film-2" /></a>
         <p>A VOLUNTAD</p>
         <p>----- 2023 -----</p>
       </div>
