la proxima vez section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>----- 2023 -----</p>
       </div>
       <div>
-        <a href="#"><img src="./img/projects/project-3.webp" alt="film-3" /></a>
+        <a href="./pages/la_proxima_vez.html"><img src="./img/projects/project-3.webp" alt="film-3" /></a>
         <p>LA PRÓXIMA VEZ</p>
         <p>----- 2023 -----</p>
       </div>
