fingir demencia section

--- a/pages/fingir_demencia.html
+++ b/pages/fingir_demencia.html
@@ -54,34 +54,22 @@
         </div>
         <section class="project-info">
             <div>
-                <a href="../img/info-projects/project-two/fragmentos_de_caza_1.webp">
-                    <img src="../img/info-projects/project-two/fragmentos_de_caza_1.webp" alt="film-1" />
+                <a href="../img/info-projects/project-five/fingir_demencia_1.webp">
+                    <img src="../img/info-projects/project-five/fingir_demencia_1.webp" alt="film-1" />
                 </a>
             </div>
-            <section class="section-img-layout">
-                <div>
-                    <a href="../img/info-projects/project-two/fragmentos_de_caza_2.webp">
-                        <img src="../img/info-projects/project-two/fragmentos_de_caza_2.webp" alt="film-1" />
-                    </a>
-                </div>
-                <div>
-                    <a href="../img/info-projects/project-two/fragmentos_de_caza_3.webp">
-                        <img src="../img/info-projects/project-two/fragmentos_de_caza_3.webp" alt="film-1" />
-                    </a>
-                </div>
-                <div>
-                    <a href="../img/info-projects/project-two/fragmentos_de_caza_4.webp">
-                        <img src="../img/info-projects/project-two/fragmentos_de_caza_4.webp" alt="film-1" />
-                    </a>
-                </div>
-            </section>
             <div>
-                <a href="../img/info-projects/project-two/fragmentos_de_caza_5.webp">
-                    <img src="../img/info-projects/project-two/fragmentos_de_caza_5.webp" alt="film-1" />
+                <a href="../img/info-projects/project-five/fingir_demencia_2.webp">
+                    <img src="../img/info-projects/project-five/fingir_demencia_2.webp" alt="film-1" />
+                </a>
+            </div>
+            <div>
+                <a href="../img/info-projects/project-five/fingir_demencia_3.webp">
+                    <img src="../img/info-projects/project-five/fingir_demencia_3.webp" alt="film-1" />
                 </a>
             </div>
             <div class="presentation">
-                <p>DIRIGIDO POR MANUEL RIOS BRIDOUX negrón.</p>
+                <p>Dirigido por Mercedes Lambre. Dirección de fotografía por Pablo Isa.</p>
             </div>
         </section>
     </main>
